mdapipkg/unpackaged/objects/Salesforce_Team__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccountToSalesforceTeam</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Team_Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Salesforce Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Saleforce Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>